MDEV-17015 Assertion `m_year <= 9999' failed in Year::Year upon bad argument to MAKEDATE